Function to get where clause, new changes in extensions

--- a/Genie/Templates/Dapper/PostgresAdapter.tt
+++ b/Genie/Templates/Dapper/PostgresAdapter.tt
@@ -6,6 +6,9 @@ using System.Data;
 using System.Linq;
 using System.Reflection;
 using System.Text;
+<#if(GenerationContext.NoDapper){#>
+using Dapper;
+<#}#>
 
 namespace <#=GenerationContext.BaseNamespace#>.Dapper 
 {
