--- a/Genie/Templates/Dapper/SqlServerAdapter.tt
+++ b/Genie/Templates/Dapper/SqlServerAdapter.tt
@@ -5,6 +5,9 @@ using System.Collections.Generic;
 using System.Data;
 using System.Linq;
 using System.Reflection;
+<#if(GenerationContext.NoDapper){#>
+using Dapper;
+<#}#>
 
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
