--- a/Genie/Templates/Infrastructure/ReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/ReadOnlyRepository.tt
@@ -30,5 +30,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         {
             return Conn.Count(query);
         }
+
+		public string GetWhereClause(IRepoQuery query) 
+		{
+			return Conn.GetWhereClause(query);
+		}
     }
 }
