--- a/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
@@ -14,5 +14,6 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 
         IEnumerable<T> Get(IRepoQuery query);
 	    int Count(IRepoQuery query);
+		string GetWhereClause(IRepoQuery query);
 	}
 }
