--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -20,5 +20,6 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 
         IEnumerable<T> Get(IRepoQuery query);
 	    int Count(IRepoQuery query);
+		string GetWhereClause(IRepoQuery query);
     }
 }
