--- a/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
@@ -100,5 +100,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete.Co
 				default: return null;
 			}
 		}
+
+		public string GetWhereClause() 
+		{
+			return _repo.GetWhereClause(GetQuery(null));
+		}
 	}
 }
