--- a/Genie/Templates/Infrastructure/Repository.tt
+++ b/Genie/Templates/Infrastructure/Repository.tt
@@ -88,5 +88,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         {
             return Conn.Count(query);
         }
+
+		public string GetWhereClause(IRepoQuery query) 
+		{
+			return Conn.GetWhereClause(query);
+		}
     }
 }
