--- a/Genie/Templates/Infrastructure/Interfaces/IDapperContext.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IDapperContext.tt
@@ -1,6 +1,5 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base.Generating.Concrete" #>
-using System;
 using System.Data;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
@@ -8,7 +7,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 	/// <summary>
     /// A system wide context that holds the connection to the database and manages the connection
     /// </summary>
-	public interface IDapperContext : IDisposable
+	public interface IDapperContext
 	{
 	    /// <summary>
         /// Connection to the database
