Prepare string in string filter

--- a/Genie/Templates/Infrastructure/Filters/Concrete/StringFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Concrete/StringFilter.tt
@@ -20,43 +20,43 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
 
         public IExpressionJoin<T, TQ> EqualsTo(string str)
         {
-            _parent.Add(QueryMaker.EqualsTo(_propertyName, str, true));
+            _parent.Add(QueryMaker.EqualsTo(_propertyName, Prepare(str), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> NotEquals(string str)
         {
-            _parent.Add(QueryMaker.NotEquals(_propertyName, str, true));
+            _parent.Add(QueryMaker.NotEquals(_propertyName, Prepare(str), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> Contains(string str)
         {
-            _parent.Add(QueryMaker.Contains(_propertyName, str));
+            _parent.Add(QueryMaker.Contains(_propertyName, Prepare(str)));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> StartsWith(string str)
         {
-            _parent.Add(QueryMaker.StartsWith(_propertyName, str));
+            _parent.Add(QueryMaker.StartsWith(_propertyName, Prepare(str)));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> NotStartsWith(string str)
         {
-            _parent.Add(QueryMaker.NotStartsWith(_propertyName, str));
+            _parent.Add(QueryMaker.NotStartsWith(_propertyName, Prepare(str)));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> EndsWith(string str)
         {
-            _parent.Add(QueryMaker.EndsWith(_propertyName, str));
+            _parent.Add(QueryMaker.EndsWith(_propertyName, Prepare(str)));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> NotEndsWith(string str)
         {
-            _parent.Add(QueryMaker.NotEndsWith(_propertyName, str));
+            _parent.Add(QueryMaker.NotEndsWith(_propertyName, Prepare(str)));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
@@ -86,14 +86,19 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
 
         public IExpressionJoin<T, TQ> In(params string[] items)
         {
-            _parent.Add(QueryMaker.In(_propertyName, items.Cast<object>().ToArray(), true));
+            _parent.Add(QueryMaker.In(_propertyName, items.Select(Prepare).Cast<object>().ToArray(), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
 
         public IExpressionJoin<T, TQ> NotIn(params string[] items)
         {
-            _parent.Add(QueryMaker.NotIn(_propertyName, items.Cast<object>().ToArray(), true));
+            _parent.Add(QueryMaker.NotIn(_propertyName, items.Select(Prepare).Cast<object>().ToArray(), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
+
+		private static string Prepare(string str) 
+		{
+			return str.Replace("'", "''");
+		}
     } 
 }
