--- a/Genie/Templates/Infrastructure/Filters/Abstract/IDateFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Abstract/IDateFilter.tt
@@ -15,6 +15,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract
         IExpressionJoin<T, TQ> Between(DateTime from, DateTime to);
         IExpressionJoin<T, TQ> IsNull();
         IExpressionJoin<T, TQ> IsNotNull();
+		IExpressionJoin<T, TQ> IsNull(bool isNull);
         IExpressionJoin<T, TQ> In(params DateTime[] items);
         IExpressionJoin<T, TQ> NotIn(params DateTime[] items);
     }
