--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -19,6 +19,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         void Remove(IEnumerable<T> entity, IDbTransaction transaction = null, int? commandTimeout = null);
 
         IEnumerable<T> Get(IRepoQuery query);
+		T GetFirstOrDefault(IRepoQuery query);
 	    int Count(IRepoQuery query);
 		string GetWhereClause(IRepoQuery query);
     }
