--- a/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
@@ -55,6 +55,12 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete.Co
 	        return _repo.Get(GetQuery(transaction));
 	    }
 
+		public <#=_name#> FirstOrDefault(IDbTransaction transaction = null)
+	    {
+			Top(1);
+	        return _repo.GetFirstOrDefault(GetQuery(transaction));
+	    }
+
 	    public int Count(IDbTransaction transaction = null)
 	    {
             return _repo.Count(GetQuery(transaction));
