--- a/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
@@ -13,6 +13,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 		IDapperContext Context { get; }
 
         IEnumerable<T> Get(IRepoQuery query);
+		T GetFirstOrDefault(IRepoQuery query);
 	    int Count(IRepoQuery query);
 		string GetWhereClause(IRepoQuery query);
 	}
